[project]
name = "xaspy"
version = "0.3.7"
authors = [
    { name = "Damian Guenzing" },
    { name = "Alpha T. N'Diaye" },
]
description = "Package for analysis of experimental xray absorption spectroscopy data"
license = { text = "MIT" }
keywords = ["xray absorption spectroscopy", "xmcd", "synchrotron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
urls = { "Homepage" = "https://github.com/gnzng/xaspy" }
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "pytest",
]
readme = "README.md"
requires-python = ">=3.10"

[optional-dependencies]
dev = ["black", "flake8", "mypy"]
