[project]
name = "xaspy"
version = "0.3.9"
authors = [
    { name = "Damian Guenzing" },
    { name = "Alpha T. N'Diaye" },
]
maintainers = [
  {name = "Damian Guenzing", email = "dguenzing@lbl.gov"}
]
description = "Package for analysis of experimental xray absorption spectroscopy data"
license = "MIT"
keywords = ["xray absorption spectroscopy", "xmcd", "synchrotron"]
classifiers = [

]
urls = { "Homepage" = "https://github.com/gnzng/xaspy" }
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "pytest",
]

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx_rtd_theme"
]
readme = "README.md"
requires-python = ">=3.10"

[optional-dependencies]
dev = ["black", "flake8", "mypy"]
docs = ["sphinx", "sphinx_rtd_theme"]